Refer to ChangeLog for detailed per-file info.

caspar version UNRELEASED

-


caspar version 20070729

- Caspar now supports a smart way for temporary overrides of csp_UHOSTS, using
  csp_UHOSTS_SUBSET. (Actually, this was implemented in release 20070713).
- Improvements in caspar(7) manpage: documented csp_BUILD, improved csp_LOAD
  examples, added example on how to add a "check" target.


caspar version 20070713

- Fix bug in csp_sucp(1) when using fourth argument (e.g. via CSP_XARG).
  This bug caused sudo to die with error "sudo: the `-u' and '-v' options may
  not be used together".
- Minor improvements in caspar(7) manpage.
- TODO: recorded lots of new ideas for improvements, thanks to caspar user
  community at UvT.


caspar version 20060618

- Various improvements in caspar(7) manpage.


caspar version 20060610

- The variables csp_scp_DIR, csp_scp_UHOSTS, csp_scp_UHOST and csp_cp_DIR,
  which were introduced in snapshot version 20060216, are no longer supported.
  These variable were redundant.  (Very likely, you'll need csp_UHOST[S],
  csp_DIR, and maybe csp_PUSH and csp_LOAD only.)


caspar version 20060608

- Unstable bleeding edge snapshot release.
- Fixed section of csp_sucp(1) manpage.
- Minor bugfixes in caspar.mk.
- Various improvements in caspar(7) manpage.


caspar version 20060531

- Yet another unstable bleeding edge snapshot release.
- Typo in caspar.mk which lead to "invalid syntax in conditional" error is
  fixed.
- Added csp_sucp(1) manpage.  This script now gets installed.
- Minor improvements on other manpages.


caspar version 20060216

- Beware! This is an unstable bleeding edge snapshot release.  Test results
  are welcomed.

- caspar.mk now has support for installing files using sudo, wrapped in ssh:
  it runs something like

   ssh foo@bar "sudo sh -c \"cat - > /duh/blah\"" < blah

  .  To facilitate this, new variables have been introduced: csp_PUSH (default: