@@ -1,4 +1,4 @@
-$Id: README,v 1.18 2007-07-29 05:53:12 joostvb Exp $
+$Id: README,v 1.19 2009-03-15 22:05:43 joostvb Exp $
 
 caspar - Makefile snippets for common tasks
 
@@ -45,7 +45,7 @@ kingkong.
 
 Create a file install.mk there, which looks like
 
- csp_SUH = admin@kingkong.example.org
+ csp_UHOST = admin@kingkong.example.org
  include caspar/mk/caspar.mk
 
 Now, do
