@@ -1,5 +1,5 @@
 \: vim:syntax=tex
-\: $Id: caspar.azm,v 1.53 2008-12-21 17:37:07 joostvb Exp $
+\: $Id: caspar.azm,v 1.54 2009-03-15 22:05:43 joostvb Exp $
 \: this is a manpage in zoem format.  see http://micans.org/zoem/ and man_zmm(7)
 
 \def{"man::synstyle"}{long}
@@ -180,18 +180,10 @@ The following variables might get phased out or removed soonish:
     default
   \item{\tt{csp_SCPFLAGS}} extra arguments to pass to scp invocation, e.g.
     '\tt{-i .ssh/id_rsa-root}'
-  \item{\tt{csp_SUH}}      ssh-reachable user@host (Secure User at Host)
-  \item{\tt{csp_SUHS}}     space separated list of ssh-reachable user@host
-    items (Secure User at HostS)
   \item{\tt{csp_CPDIR}}    directory to which we can cp(1), instead of scp
     (CoPy DIRectory)
   \item{\tt{csp_CPDIRS}}   space separated list of directories to which we can
     copy (CoPy DIRectorieS)
-  \item{\tt{csp_SCPDIR}}   directory on ssh reachable host, with trailing /
-    (Secure CoPy DIRectory)
-  \item{\tt{csp_SUHDIRS}}  by default, this is the list \tt{$(csp_SUH):$(dir)} for each
-    \tt{$(dir)} in \tt{$(csp_SUHS)} (or where \tt{dir = $(csp_SCPDIR)}, in
-    case \tt{csp_SUHS} is not set).  More items can get added to this list on the fly.
 \end{itemize}
 
 \sec{examples}{EXAMPLES}
@@ -365,7 +357,7 @@ probably what you want).  Running "make" will perform "install", "check" and
 
 \cpar{Combining the csp_LOAD target with multiple hosts; building files remotely}
 
-You'll have to loop over csp_SUHS to execute load-command.  Here's an example
+You'll have to loop over csp_UHOSTS to execute load-command.  Here's an example
 doing some preprocessing on the remote hosts too.
 
 \verbatim{
@@ -383,15 +375,6 @@ doing some preprocessing on the remote hosts too.
 }
 
 (You might want to use a variable like \tt{my_EXEC} for ssh, see above.)
-
-(In pre caspar 20060216 syntax, one would write this as
-
-\verbatim{
-  csp_SCPDIR = /etc/ssh/
-  csp_SUHS = root@some.host.somewhere root@some.other.host
-  csp_LOAD = sshd_config-load
-  [...]
-})
 
 \cpar{Using the csp_TABOOFILES_{ADD,SKIP} variables; another way to perform remote builds}
 
